# backend-lacquer

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  hairdressers.db  run.sh
.github/workflows/: main.yml  rust.yml
src/: content.rs  main.rs
src/repository/: db.rs
src/server/: hdresser.rs  login.rs  mod.rs  photo.rs  reg.rs  response.rs  sysinfo.rs
src/utils/: dbstuff.rs  ipstuff.rs  mod.rs
