[package]
name = "backend-lacquer"
version = "0.7.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.5"
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
sanitize-filename = "0.4"
toml = "0.7"
reqwest = { version = "0.11", features = ["json"] }
sqlite = "0.30"
log = "0.4.17"
env_logger = "0.10.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

